fix header on mobile

--- a/inc/assets/sass/custom_style.scss
+++ b/inc/assets/sass/custom_style.scss
@@ -319,7 +319,7 @@ body.hide_scroll {
 .home-video-header-container {
   display: flex;
   flex-direction: column;
-  height: calc(100dvh - 104px);
+  height: calc(100dvh - 150px);
   font-family: $en-regular;
   .video-container {
     flex-grow: 1;
@@ -1036,18 +1036,20 @@ body.hide_scroll {
 .site-title {
   width: 100%;
   padding: 16px 60px;
-  font-size: 5rem;
+  font-size: 4.5rem;
   color: #fff;
-  transition: 0.3s ease-in-out;
+  // transition: 0.3s ease-in-out;
   .white-line{
     width: 100%;
     border-bottom: 15px solid #fff;
+    margin: 0 10px;
   }
   a {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: baseline;
 
     p {
       margin: 0;
@@ -1066,10 +1068,10 @@ body.hide_scroll {
   }
 }
 
-.site-title:hover {
-  color: #ffffffbb;
-  transition: 0.3s ease-in-out;
-}
+// .site-title:hover {
+//   color: #ffffffbb;
+//   transition: 0.3s ease-in-out;
+// }
 
 // side menu
 .responsive-menu-button {
